# Kindle-DrugWars

./: CHANGELOG.md  LICENSE  README.md  meson.build
.github/workflows/: main.yml
extension/kindledopewars/: config.xml  gtkrc  menu.json
scripts/: package-kual.sh  write-meson-crossfile.sh
src/: main.cpp
